--- a/tox.ini
+++ b/tox.ini
@@ -48,10 +48,7 @@ description =
     Generate docs using Sphinx.
 skip_install = False
 deps =
-    sphinx
-    sphinx_rtd_theme
-    pyenchant
-    sphinxcontrib_spelling
+    -r{toxinidir}/requirements-dev.txt
     -r{toxinidir}/requirements-latest.txt
 commands =
     # first test with all warnings fatal
