--- a/tox.ini
+++ b/tox.ini
@@ -84,7 +84,7 @@ exclude = crossbar/worker/test/examples/syntaxerror.py
 deps =
     flake8
 commands =
-    flake8 --ignore=E402,F405,E501,E722,E741,E731,N801,N802,N803,N805,N806 crossbar
+    flake8 --ignore=E117,E402,F405,E501,E722,E741,E731,N801,N802,N803,N805,N806 crossbar
 
 
 [testenv:coverage]
