--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,9 @@ envlist =
     flake8
     bandit
     coverage
-    {py36,py37,pypy3}-{pinned,unpinned,abtrunk}-trial
-    {py36,py37,pypy3}-cli
-    {py36,py37,pypy3}-examples
+    {py37,pypy3}-{pinned,unpinned,abtrunk}-trial
+    {py37,pypy3}-cli
+    {py37,pypy3}-examples
 
 
 [testenv]
@@ -39,7 +39,7 @@ commands =
     # in envs with "trial", run Twisted trial
     trial: python -m twisted.trial crossbar
 setenv =
-    {py36,py37,pypy3}: CB_FULLTESTS = 1
+    {py37,pypy3}: CB_FULLTESTS = 1
 
 
 
@@ -118,7 +118,7 @@ commands =
 setenv =
     COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
     COVERAGE_FILE = {toxinidir}/.coverage
-    {py36,py37,pypy3}: CB_FULLTESTS = 1
+    {py37,pypy3}: CB_FULLTESTS = 1
 
 
 ; [testenv:coverage-report]
