--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ matrix:
     - python: "3.7"
       env: TOX_ENV=py37-cli
 
-    - python: pypy3
+    - python: "pypy3.5"
       env: TOX_ENV=pypy3-cli
 
     # osx/cli
@@ -73,7 +73,7 @@ matrix:
     - python: "3.7"
       env: TOX_ENV=py37-examples
 
-    - python: pypy3
+    - python: "pypy3.5"
       env: TOX_ENV=pypy3-examples
 
     # osx/examples
