--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -1,16 +1,18 @@
 argh==0.26.2
 asn1crypto==0.24.0
-attrs==18.2.0
+attrs==19.1.0
 autobahn==19.2.1
 Automat==0.7.0
 bitstring==3.1.5
 cbor==1.0.0
+cbor2==4.1.2
 certifi==2018.11.29
-cffi==1.12.0
+cffi==1.12.2
 chardet==3.0.4
 Click==7.0
+colorama==0.4.1
 constantly==15.1.0
-cryptography==2.5
+cryptography==2.6.1
 h2==3.1.0
 hpack==3.0.0
 hyperframe==5.2.0
@@ -19,13 +21,13 @@ idna==2.5
 incremental==17.5.0
 Jinja2==2.10
 lmdb==0.94
-MarkupSafe==1.1.0
+MarkupSafe==1.1.1
 mistune==0.8.4
 netaddr==0.7.19
 passlib==1.7.1
 pathtools==0.1.2
 priority==1.3.0
-psutil==5.5.0
+psutil==5.6.0
 py-ubjson==0.12.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.4
@@ -36,7 +38,8 @@ PyNaCl==1.3.0
 pyOpenSSL==19.0.0
 PyQRCode==1.2.1
 PyTrie==0.3.1
-PyYAML==4.2b4
+pytz==2018.9
+PyYAML==5.1b3
 requests==2.21.0
 sdnotify==0.3.2
 service-identity==18.1.0
@@ -48,7 +51,9 @@ treq==18.6.0
 Twisted==18.9.0
 txaio==18.8.1
 txtorcon==19.0.0
-u-msgpack-python==2.5.0
+u-msgpack-python==2.5.1
 urllib3==1.24.1
+vmprof==0.4.12
 watchdog==0.9.0
+zlmdb==19.2.2
 zope.interface==4.6.0
