--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,8 @@ commands =
     # in envs with "pinned", install hash-pinned deps (which is what we release in binaries)
     pinned: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
 
+    python -c "from autobahn.wamp.serializer import JsonObjectSerializer, MsgPackObjectSerializer, CBORObjectSerializer, UBJSONObjectSerializer"
+
     # in envs with "trial", install test/dev deps
     trial: pip install -r {toxinidir}/requirements-dev.txt
 
