--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -1,18 +1,20 @@
 argh==0.26.2
+argon2-cffi==19.1.0
 asn1crypto==0.24.0
 attrs==19.1.0
-autobahn==19.2.1
+autobahn==19.3.2
 Automat==0.7.0
 bitstring==3.1.5
 cbor==1.0.0
 cbor2==4.1.2
-certifi==2018.11.29
+certifi==2019.3.9
 cffi==1.12.2
 chardet==3.0.4
 Click==7.0
 colorama==0.4.1
 constantly==15.1.0
 cryptography==2.6.1
+flatbuffers==1.10
 h2==3.1.0
 hpack==3.0.0
 hyperframe==5.2.0
@@ -21,13 +23,16 @@ idna==2.5
 incremental==17.5.0
 Jinja2==2.10
 lmdb==0.94
+lz4==2.1.6
 MarkupSafe==1.1.1
 mistune==0.8.4
+msgpack==0.6.1
 netaddr==0.7.19
+numpy==1.15.4
 passlib==1.7.1
 pathtools==0.1.2
 priority==1.3.0
-psutil==5.6.0
+psutil==5.6.1
 py-ubjson==0.12.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.4
@@ -37,9 +42,10 @@ PyHamcrest==1.9.0
 PyNaCl==1.3.0
 pyOpenSSL==19.0.0
 PyQRCode==1.2.1
+python-snappy==0.5.3
 PyTrie==0.3.1
 pytz==2018.9
-PyYAML==5.1b3
+PyYAML==5.1
 requests==2.21.0
 sdnotify==0.3.2
 service-identity==18.1.0
@@ -52,8 +58,10 @@ Twisted==18.9.0
 txaio==18.8.1
 txtorcon==19.0.0
 u-msgpack-python==2.5.1
+ujson==1.35
 urllib3==1.24.1
 vmprof==0.4.12
 watchdog==0.9.0
-zlmdb==19.2.2
+wsaccel==0.6.2
+zlmdb==19.3.2
 zope.interface==4.6.0
