--- a/docker/aarch64/Dockerfile.cpy3
+++ b/docker/aarch64/Dockerfile.cpy3
@@ -33,6 +33,9 @@ RUN    apt-get update \
                build-essential \
                libssl-dev \
                libffi-dev \
+               libunwind-dev \
+               libsnappy-dev \
+               libbz2-dev \
     # install Crossbar.io from PyPI. rgd pip: https://github.com/pypa/pip/issues/6158 and https://github.com/pypa/pip/issues/6197
     && pip install --no-cache-dir --upgrade "pip<19" \
     && pip install --no-cache-dir crossbar>=${CROSSBAR_VERSION} \
