--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,7 @@
 [bdist_wheel]
-# use py2.py3 tag for pure-python dist:
 universal=1
+
+# https://stackoverflow.com/a/49501010/884770
+[options]
+install_requires =
+    vmprof>=0.4.12; platform_machine=='x86_64' or platform_machine=='i386' or platform_machine=='arm'
