--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -1,5 +1,5 @@
 attrs>=17.2.0
-autobahn[all]>=19.3.2
+autobahn[asyncio,twisted,encryption,compress,serialization,scram]>=19.3.3
 bitstring>=3.1.5
 cbor>=1.0.0
 click>=6.7
@@ -35,5 +35,6 @@ txtorcon>=0.19.3
 u-msgpack-python>=2.4.1
 vmprof>=0.4.12; platform_machine=='x86_64' or platform_machine=='i386' or platform_machine=='arm'
 watchdog>=0.8.3
+wsaccel>=0.6.2; platform_python_implementation=='CPython'
 zlmdb>=19.3.2
 zope.interface>=4.4.2
