--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,4 @@ universal=1
 [options]
 install_requires =
     vmprof>=0.4.12; platform_machine=='x86_64' or platform_machine=='i386' or platform_machine=='arm'
+    wsaccel>=0.6.2; platform_python_implementation=='CPython'
