--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -2,19 +2,20 @@ argh==0.26.2
 argon2-cffi==19.1.0
 asn1crypto==0.24.0
 attrs==19.1.0
-autobahn==19.3.2
+autobahn==19.3.3
 Automat==0.7.0
 bitstring==3.1.5
 cbor==1.0.0
 cbor2==4.1.2
 certifi==2019.3.9
-cffi==1.12.2
+cffi==1.12.0
 chardet==3.0.4
 Click==7.0
 colorama==0.4.1
 constantly==15.1.0
 cryptography==2.6.1
 flatbuffers==1.10
+greenlet==0.4.13
 h2==3.1.0
 hpack==3.0.0
 hyperframe==5.2.0
@@ -36,7 +37,6 @@ psutil==5.6.1
 py-ubjson==0.12.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.4
-pycparser==2.19
 Pygments==2.3.1
 PyHamcrest==1.9.0
 PyNaCl==1.3.0
@@ -46,6 +46,7 @@ python-snappy==0.5.4
 PyTrie==0.3.1
 pytz==2018.9
 PyYAML==5.1
+readline==6.2.4.1
 requests==2.21.0
 sdnotify==0.3.2
 service-identity==18.1.0
@@ -62,6 +63,5 @@ ujson==1.35
 urllib3==1.24.1
 vmprof==0.4.12
 watchdog==0.9.0
-wsaccel==0.6.2
 zlmdb==19.3.2
 zope.interface==4.6.0
