--- a/docker/x86_64/Dockerfile.cpy3
+++ b/docker/x86_64/Dockerfile.cpy3
@@ -42,6 +42,9 @@ RUN    apt-get update \
     && rm -rf ~/.cache \
     && rm -rf /var/lib/apt/lists/*
 
+# install manually, as environment markers don't work when installing crossbar from pypi
+RUN pip install --no-cache-dir "wsaccel>=0.6.2" "vmprof>=0.4.12"
+
 # test if everything installed properly
 RUN crossbar version
 
