--- a/docker/x86_64/Dockerfile.pypy3
+++ b/docker/x86_64/Dockerfile.pypy3
@@ -43,6 +43,9 @@ RUN    apt-get update \
     && rm -rf ~/.cache \
     && rm -rf /var/lib/apt/lists/*
 
+# install manually, as environment markers don't work when installing crossbar from pypi
+RUN pip install --no-cache-dir "vmprof>=0.4.12"
+
 # test if everything installed properly
 RUN crossbar version
 
