--- a/docker/aarch64/Dockerfile.cpy3
+++ b/docker/aarch64/Dockerfile.cpy3
@@ -44,6 +44,11 @@ RUN    apt-get update \
     && rm -rf ~/.cache \
     && rm -rf /var/lib/apt/lists/*
 
+# install manually, as environment markers don't work when installing crossbar from pypi
+# vmprof is not yet supported on ARM64 https://github.com/vmprof/vmprof-python/issues/192
+# RUN pip install --no-cache-dir "wsaccel>=0.6.2" "vmprof>=0.4.12"
+RUN pip install --no-cache-dir "wsaccel>=0.6.2"
+
 # test if everything installed properly
 RUN crossbar version
 
