--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,7 +12,7 @@ towncrier
 pyenchant>=2.0.0
 pygments>=2.2.0
 scour>=0.37
-sphinx>=1.8.1
+sphinx>=1.8.1,<2
 sphinx-rtd-theme>=0.4.2
 sphinxcontrib-images>=0.8.0
 sphinxcontrib-spelling>=4.2.0
