--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: crossbar
-version: 'latest'
-version-script: python3 -c "exec(open('crossbar/_version.py').read()); print(__version__)"
+version: latest
+version-script: git describe --always | sed -e 's/-/+git/;y/-/./' | tail -c +2
 summary: Crossbar.io - Polyglot application router.
 description: |
   Crossbar.io is a networking platform for distributed and microservice
@@ -48,5 +48,5 @@ parts:
       snapcraftctl prime
       echo "Compiling pyc files..."
       # Delete the file that would fail the compilation process
-      rm "$SNAPCRAFT_PRIME/lib/python3.6/site-packages/crossbar/worker/test/examples/syntaxerror.py"
-      "$SNAPCRAFT_PART_INSTALL/usr/bin/python3" -m compileall -q "$SNAPCRAFT_PRIME"
+      rm $SNAPCRAFT_PRIME/lib/python3.6/site-packages/crossbar/worker/test/examples/syntaxerror.py
+      $SNAPCRAFT_PART_INSTALL/usr/bin/python3 -m compileall -q $SNAPCRAFT_PRIME
