fix #1955; upgrade jinja2 (sec warning); new rel key; freeze deps

--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -1,14 +1,15 @@
 attrs>=17.2.0
 autobahn[asyncio,twisted,encryption,compress,serialization,scram]>=19.3.3
 bitstring>=3.1.5
+bcrypt>=3.1.6
 cbor>=1.0.0
 click>=6.7
 constantly>=15.1.0
-cryptography>=1.9
+cryptography>=2.6.1
 h2>=3.0,<4.0
 idna<2.6,>=2.5
 incremental>=17.5.0
-jinja2>=2.9.6
+jinja2>=2.10.1
 lmdb>=0.92
 mistune>=0.7.4
 netaddr>=0.7.19
@@ -16,8 +17,8 @@ passlib>=1.7.1
 priority>=1.3.0
 psutil>=5.2.2
 py-ubjson>=0.9.0
-pyasn1-modules>=0.0.9
-pyasn1>=0.2.3
+pyasn1-modules>=0.2.4
+pyasn1>=0.4.5
 pygments>=2.2.0
 pynacl>=1.1.2
 pyopenssl>=17.1.0
@@ -29,7 +30,7 @@ service_identity>=17.0.0
 setproctitle>=1.1.10
 setuptools>=36.2.7
 treq>=17.3.1
-twisted>=18.9.0
+twisted>=19.2.0
 txaio>=18.8.1
 txtorcon>=0.19.3
 u-msgpack-python>=2.4.1
