--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -4,25 +4,25 @@ asn1crypto==0.24.0
 attrs==19.1.0
 autobahn==19.3.3
 Automat==0.7.0
+bcrypt==3.1.6
 bitstring==3.1.5
 cbor==1.0.0
 cbor2==4.1.2
 certifi==2019.3.9
-cffi==1.12.0
+cffi==1.12.2
 chardet==3.0.4
 Click==7.0
 colorama==0.4.1
 constantly==15.1.0
 cryptography==2.6.1
 flatbuffers==1.10
-greenlet==0.4.13
 h2==3.1.0
 hpack==3.0.0
 hyperframe==5.2.0
-hyperlink==18.0.0
+hyperlink==19.0.0
 idna==2.5
 incremental==17.5.0
-Jinja2==2.10
+Jinja2==2.10.1
 lmdb==0.94
 lz4==2.1.6
 MarkupSafe==1.1.1
@@ -34,9 +34,10 @@ passlib==1.7.1
 pathtools==0.1.2
 priority==1.3.0
 psutil==5.6.1
-py-ubjson==0.12.0
+py-ubjson==0.13.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.4
+pycparser==2.19
 Pygments==2.3.1
 PyHamcrest==1.9.0
 PyNaCl==1.3.0
@@ -44,18 +45,17 @@ pyOpenSSL==19.0.0
 PyQRCode==1.2.1
 python-snappy==0.5.4
 PyTrie==0.3.1
-pytz==2018.9
+pytz==2019.1
 PyYAML==5.1
-readline==6.2.4.1
 requests==2.21.0
 sdnotify==0.3.2
 service-identity==18.1.0
 setproctitle==1.1.10
-setuptools==40.8.0
+setuptools==41.0.0
 six==1.12.0
 sortedcontainers==2.1.0
 treq==18.6.0
-Twisted==18.9.0
+Twisted==19.2.0
 txaio==18.8.1
 txtorcon==19.0.0
 u-msgpack-python==2.5.1
@@ -63,5 +63,6 @@ ujson==1.35
 urllib3==1.24.1
 vmprof==0.4.12
 watchdog==0.9.0
+wsaccel==0.6.2
 zlmdb==19.3.2
 zope.interface==4.6.0
