--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -34,6 +34,8 @@ twisted>=19.2.0
 txaio>=18.8.1
 txtorcon>=0.19.3
 u-msgpack-python>=2.4.1
+# urllib3 is an indirect dependency, but we force a recent version because of https://nvd.nist.gov/vuln/detail/CVE-2019-11324
+urllib3>=1.24.2
 vmprof>=0.4.12; platform_machine=='x86_64' or platform_machine=='i386' or platform_machine=='arm'
 watchdog>=0.8.3
 wsaccel>=0.6.2; platform_python_implementation=='CPython'
