--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -30,7 +30,9 @@ service_identity>=17.0.0
 setproctitle>=1.1.10
 setuptools>=36.2.7
 treq>=17.3.1
-twisted>=19.2.0
+twisted[tls,conch,http2]>=19.2.0; sys_platform != 'darwin' and sys_platform != 'win32'
+twisted[tls,conch,http2,osx_platform]>=19.2.0; sys_platform == 'darwin'
+twisted[tls,conch,http2,windows_platform]>=19.2.0; sys_platform == 'win32'
 txaio>=18.8.1
 txtorcon>=0.19.3
 u-msgpack-python>=2.4.1
