workaround urllib3 version conflict

--- a/tox.ini
+++ b/tox.ini
@@ -53,6 +53,9 @@ deps =
     -r{toxinidir}/requirements-dev.txt
     -r{toxinidir}/requirements-latest.txt
 commands =
+    # workaround for "pkg_resources.ContextualVersionConflict"
+    pip install --force-reinstall "urllib3<1.25,>=1.21.1"
+
     # first test with all warnings fatal
     sphinx-build -nWT -b dummy ./docs ./docs/_build
 
