Add vscode settings file

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ vers/
 .DS_Store
 _build
 pip-wheel-metadata
+
+# vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
