--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -9,7 +9,7 @@ bcrypt==3.1.7
 bitstring==3.1.6
 cbor==1.0.0
 cbor2==4.1.2
-certifi==2019.6.16
+certifi==2019.9.11
 cffi==1.12.3
 chardet==3.0.4
 Click==7.0
@@ -25,10 +25,10 @@ idna==2.5
 incremental==17.5.0
 Jinja2==2.10.1
 lmdb==0.97
-lz4==2.1.10
+lz4==2.2.1
 MarkupSafe==1.1.1
 mistune==0.8.4
-msgpack==0.6.1
+msgpack==0.6.2
 netaddr==0.7.19
 numpy==1.15.4
 passlib==1.7.1
@@ -58,12 +58,13 @@ sortedcontainers==2.1.0
 treq==18.6.0
 Twisted==19.7.0
 txaio==18.8.1
-txtorcon==19.0.0
+txtorcon==19.1.0
 u-msgpack-python==2.5.2
 ujson==1.35
 urllib3==1.24.3
 vmprof==0.4.15
 watchdog==0.9.0
+Werkzeug==0.16.0
 wsaccel==0.6.2
-zlmdb==19.9.2
+zlmdb==19.9.3
 zope.interface==4.6.0
