--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -50,3 +50,10 @@ parts:
       # Delete the file that would fail the compilation process
       rm $SNAPCRAFT_PRIME/lib/python3.6/site-packages/crossbar/worker/test/examples/syntaxerror.py
       $SNAPCRAFT_PART_INSTALL/usr/bin/python3 -m compileall -q $SNAPCRAFT_PRIME
+
+slots:
+  runtime-dir:
+    interface: content
+    content: executables
+    read:
+      - $SNAP/lib/python3.6/site-packages
