share snap root directory

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -59,5 +59,4 @@ slots:
     interface: content
     content: executables
     read:
-      - $SNAP/lib/python3.6/site-packages
-      - $SNAP/bin
+      - $SNAP
