--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -23,39 +23,26 @@ architectures:
 
 apps:
   crossbar:
-    command: python3.8 -u $SNAP/bin/crossbar
+    command: python -u $SNAP/crossbar/bin/crossbar
     environment:
       PYTHONPYCACHEPREFIX: $SNAP_DATA/pycache
-      PYTHONPATH: $PYTHONPATH:$SNAP/lib/python3.8/site-packages
+      PYTHONPATH: $PYTHONPATH:$SNAP/crossbar
+      PATH: $PATH:$SNAP/crossbar/bin
     plugs:
       - home
       - network
       - network-bind
 
 parts:
-  py38:
-    plugin: nil
-    override-build: |
-      add-apt-repository ppa:deadsnakes/ppa -y
-      apt update
-      apt install python3.8 python3.8-venv python3.8-dev -y
   crossbar:
-    plugin: nil
+    plugin: py38
     source: .
-    after:
-      - py38
     override-build: |
       snapcraftctl build
       snapcraftctl set-version $(git describe --always --dirty | sed -e 's/-/+git/;y/-/./' | tail -c +2)
-      rm -rf venv
-      /usr/bin/python3.8 -m venv venv
-      venv/bin/python3 -m pip install .
-      find venv -type d -name __pycache__ -print0 | xargs -0 rm -rf
-      cp -r venv/* ${SNAPCRAFT_PART_INSTALL}
     stage-packages:
       - libsnappy1v5
       - libunwind8
-      - python3.8
     build-packages:
       - build-essential
       - gcc
@@ -66,7 +53,6 @@ parts:
       - libsnappy-dev
       - libunwind-dev
       - git
-      - software-properties-common
 
 slots:
   runtime-dir:
