re-enable arm64

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -21,6 +21,9 @@ architectures:
   - build-on: armhf
     run-on: armhf
 
+  - build-on: arm64
+    run-on: arm64
+
 apps:
   crossbar:
     command: python -u $SNAP/crossbar/bin/crossbar
