use python3.8 from ubuntu archives

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -26,22 +26,42 @@ architectures:
 
 apps:
   crossbar:
-    command: python -u $SNAP/crossbar/bin/crossbar
+    command: python3.8 -u $SNAP/bin/crossbar
     environment:
       PYTHONPYCACHEPREFIX: $SNAP_DATA/pycache
-      PYTHONPATH: $PYTHONPATH:$SNAP/crossbar
-      PATH: $PATH:$SNAP/crossbar/bin
+      PATH: $PATH:$SNAP/usr/bin:$SNAP/bin
+      PYTHONPATH: $PYTHONPATH:$SNAP/lib/python3.8/site-packages
     plugs:
       - home
       - network
       - network-bind
 
 parts:
+  py38:
+    plugin: nil
+    stage-packages:
+      - python3.8
+    build-packages:
+      - wget
+      - python3.8
+      - python3.8-dev
+      - python3.8-venv
+      - python3.8-distutils
+    override-build: |
+      snapcraftctl build
+      wget -O - https://bootstrap.pypa.io/get-pip.py | /usr/bin/python3.8 -u
   crossbar:
-    plugin: py38
+    plugin: nil
+    after:
+      - py38
     source: .
     override-build: |
       snapcraftctl build
+      # Build and install Crossbar
+      export MAKEFLAGS="-j$(nproc)"
+      /usr/bin/python3.8 -m pip install --ignore-installed -U --no-compile --prefix $SNAPCRAFT_PART_INSTALL .
+      find $SNAPCRAFT_PART_INSTALL -type f -name *.so -exec strip -s {} \;
+      # Set package version
       snapcraftctl set-version $(git describe --always --dirty | sed -e 's/-/+git/;y/-/./' | tail -c +2)
     stage-packages:
       - libsnappy1v5
@@ -55,6 +75,7 @@ parts:
       - libbz2-dev
       - libsnappy-dev
       - libunwind-dev
+      # required by package versioning
       - git
 
 slots:
