--- a/tox.ini
+++ b/tox.ini
@@ -89,7 +89,9 @@ exclude = crossbar/worker/test/examples/syntaxerror.py
 deps =
     flake8
 commands =
-    flake8 --ignore=E117,E402,F405,E501,E722,E741,E731,N801,N802,N803,N805,N806 crossbar
+    flake8 --ignore=E117,E402,F405,E501,E722,E741,E731,N801,N802,N803,N805,N806,W503 crossbar
+    # justification for ignoring W503 in the docs:
+    # https://www.flake8rules.com/rules/W503.html
 
 
 [testenv:coverage]
