--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -1,20 +1,20 @@
 appdirs==1.4.3
 argon2-cffi==19.2.0
 attrs==19.3.0
-autobahn==20.2.1
-Automat==0.8.0
+autobahn==20.4.1
+Automat==20.2.0
 bcrypt==3.1.7
 bitstring==3.1.6
 cbor==1.0.0
-cbor2==5.0.1
+cbor2==5.1.0
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
-Click==7.0
+click==7.1.1
 colorama==0.4.3
 constantly==15.1.0
 cryptography==2.8
-flatbuffers==1.11
+flatbuffers==1.12
 h2==3.2.0
 hpack==3.0.0
 hyperframe==5.2.0
@@ -25,43 +25,43 @@ Jinja2==2.11.1
 lmdb==0.98
 MarkupSafe==1.1.1
 mistune==0.8.4
-msgpack==0.6.2
+msgpack==1.0.0
 netaddr==0.7.19
 numpy==1.15.4
 passlib==1.7.2
 pathtools==0.1.2
 priority==1.3.0
-psutil==5.6.7
-py-ubjson==0.14.0
+psutil==5.7.0
+py-ubjson==0.15.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser==2.19
-Pygments==2.5.2
-PyHamcrest==2.0.0
+pycparser==2.20
+Pygments==2.6.1
+PyHamcrest==2.0.2
 PyNaCl==1.3.0
 pyOpenSSL==19.1.0
 PyQRCode==1.2.1
 python-snappy==0.5.4
 PyTrie==0.3.1
 pytz==2019.3
-PyYAML==5.3
-requests==2.22.0
+PyYAML==5.3.1
+requests==2.23.0
 sdnotify==0.3.2
 service-identity==18.1.0
 setproctitle==1.1.10
-setuptools==45.2.0
+setuptools==46.1.3
 six==1.14.0
 sortedcontainers==2.1.0
-treq==18.6.0
-Twisted==19.10.0
-txaio==20.1.1
+treq==20.3.0
+Twisted==20.3.0
+txaio==20.3.1
 txtorcon==19.1.0
 u-msgpack-python==2.5.2
-ujson==1.35
+ujson==2.0.3
 urllib3==1.24.3
 vmprof==0.4.15
 watchdog==0.10.2
-Werkzeug==1.0.0
+Werkzeug==1.0.1
 wsaccel==0.6.2
-zlmdb==20.1.1
-zope.interface==4.7.1
+zlmdb==20.4.1
+zope.interface==5.0.2
