--- a/tox.ini
+++ b/tox.ini
@@ -56,6 +56,9 @@ commands =
     # workaround for "pkg_resources.ContextualVersionConflict"
     pip install --force-reinstall "urllib3<1.25,>=1.21.1"
 
+    # sphinxcontrib.images: avoid "RemovedInSphinx30Warning: sphinx.environment.NoUri is deprecated"
+    pip install --force-reinstall "sphinx<3"
+
     # first test with all warnings fatal
     sphinx-build -nWT -b dummy ./docs ./docs/_build
 
