--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,12 @@ commands =
     # in envs with "pinned", install hash-pinned deps (which is what we release in binaries)
     pinned: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
 
+    python -V
+    pip show twisted
+    pip show treq
+
     python -c "from autobahn.wamp.serializer import JsonObjectSerializer, MsgPackObjectSerializer, CBORObjectSerializer, UBJSONObjectSerializer"
+    python -c "from twisted.python.compat import _PY3, unicode"
 
     # in envs with "trial", install test/dev deps
     trial: pip install -r {toxinidir}/requirements-dev.txt
