--- a/requirements-latest.txt
+++ b/requirements-latest.txt
@@ -28,10 +28,14 @@ sdnotify>=0.3.1
 service_identity>=17.0.0
 setproctitle>=1.1.10
 setuptools>=36.2.7
-treq>=17.3.1
-git+https://github.com/twisted/twisted@trunk#egg=twisted[tls,conch,http2]; sys_platform != 'darwin' and sys_platform != 'win32'
-git+https://github.com/twisted/twisted@trunk#egg=twisted[tls,conch,http2,osx_platform]; sys_platform == 'darwin'
-git+https://github.com/twisted/twisted@trunk#egg=twisted[tls,conch,http2,windows_platform]; sys_platform == 'win32'
+treq>=20.4.1
+twisted[tls,conch,http2]>=20.3.0; sys_platform != 'darwin' and sys_platform != 'win32'
+twisted[tls,conch,http2,osx_platform]>=20.3.0; sys_platform == 'darwin'
+twisted[tls,conch,http2,windows_platform]>=20.3.0; sys_platform == 'win32'
+# twisted 20.3.0.dev0: treq fails with "from twisted.python.compat import _PY3, unicode"
+# git+https://github.com/twisted/twisted@trunk#egg=twisted[tls,conch,http2]; sys_platform != 'darwin' and sys_platform != 'win32'
+# git+https://github.com/twisted/twisted@trunk#egg=twisted[tls,conch,http2,osx_platform]; sys_platform == 'darwin'
+# git+https://github.com/twisted/twisted@trunk#egg=twisted[tls,conch,http2,windows_platform]; sys_platform == 'win32'
 git+https://github.com/crossbario/txaio.git@master#egg=txaio
 txtorcon>=0.19.3
 u-msgpack-python>=2.4.1
